--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,11 @@
 body {
   background-color: #fafafa !important;
+  margin: 0;
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  padding: 0;
   text-align: center;
 }
 
